Fixed filtering on Firefox.

--- a/src/index.sass
+++ b/src/index.sass
@@ -24,6 +24,7 @@ body
 
 .game
   pointer-events: auto
+  image-rendering: -moz-crisp-edges
   image-rendering: pixelated
 
 .player
